fix white space on top of html body

--- a/assets/css/app.styl
+++ b/assets/css/app.styl
@@ -23,6 +23,7 @@ body {
 }
 
 #app
+  display inline-block
   margin 1em 2em
 
   > header
